# OpenSplines

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  design  notes  ref.py
include/OpenSplines/: BezierSpline.hpp  Spline.hpp  Splines.hpp
test/: test_eval.cpp
